# wheel

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE_TECHNICAL_NOTES.md
.github/workflows/: windows_x64_dev.yml
analyzer/: CMakeLists.txt
analyzer/include/analyzer/: error.hxx  tab.hxx
analyzer/src/: tab.cxx
lexer/: CMakeLists.txt
lexer/include/lexer/: aliases.hxx  cursor.hxx  handlers.hxx  kind.hxx  lexer.hxx  properties.hxx  token.hxx  utils.hxx
scripts/: build.py  interactive.py  lib.py  metadata.py  run_test.py
src/: main.cxx
src/__internal_headers/: __config.hxx
src/ast/: allocator.hxx
src/ast/grammar/: Identifier.hxx  Int.hxx  Operator.hxx  Statement.hxx  Whitespace.hxx
src/ast/include/: node_ast.hxx
src/ast/lexer/: lexer.hxx  token.hxx  utils.hxx
src/ast/nodes/: node_ast.cxx
src/ast/nodes/include/: data_type.hxx  node_ast.hxx
src/ast/types/: int_type.cxx
src/ast/types/include/: int_type.hxx
tests/: CMakeLists.txt  allocator_test.cxx
tests/__internal/: __assert.hxx
tests/analyzer_tests/: CMakeLists.txt  tab_analyzer_test.cxx
tests/grammar_tests/: int_grammar_test.cxx
tests/interpreter_tests/: CMakeLists.txt  interpreter_variable_declaration_test.cxx
tests/lexer_tests/: CMakeLists.txt  lexer_comment_test.cxx  lexer_cursor_test.cxx  lexer_eof_test.cxx  lexer_literal_test.cxx  lexer_newline_test.cxx  lexer_operator_test.cxx  lexer_plus_operator_test.cxx  lexer_punctuation_test.cxx  lexer_space_test.cxx  lexer_tab_test.cxx
tests/lexer_tests/__lexer_test_helper/: __helper.hxx
tests/memory_tests/: CMakeLists.txt  memory_small_vec_test.cxx
tests/parser_tests/: CMakeLists.txt  parse_symbol_interner_test.cxx  parser_arena_test.cxx  parser_ast_test.cxx  parser_call_statement_test.cxx  parser_function_definition_test.cxx  parser_symbol_interner_test.cxx  parser_variable_declaration_test.cxx
tests/semantic_tests/: CMakeLists.txt  semantic_println_test.cxx  semantic_variable_declaration_test.cxx
tests/type_tests/: int_type_test.cxx
tests/utils_tests/: CMakeLists.txt  utils_not_null_test.cxx
wheel_cli/: CMakeLists.txt  main.cxx
wheel_interpreter/: CMakeLists.txt  interpreter.cxx
wheel_interpreter/include/wheel_interpreter/: interpreter.hxx
wheel_lexer/: CMakeLists.txt
wheel_lexer/include/wheel_lexer/: aliases.hxx  cursor.hxx  handlers.hxx  kind.hxx  lexer.hxx  source_map.hxx  token.hxx  utils.hxx
wheel_lexer/lib/: __wheel_lexer_config.hxx  cursor.hxx  handlers.hxx  kind.hxx  properties.hxx  token.hxx
wheel_memory/: CMakeLists.txt
wheel_memory/include/wheel_memory/: allocator.hxx  config.hxx  vec.hxx
wheel_parser/: CMakeLists.txt  nodes.cxx  parser.cxx
wheel_parser/include/wheel_parser/: allocator.hxx  config.hxx  declaration.hxx  error.hxx  parser.hxx  parser_utils.hxx
wheel_parser/include/wheel_parser/ast/: builtins.hxx  int_declaration.hxx  keywords.hxx  nodes.hxx  symbol.hxx
wheel_parser/include/wheel_parser/functions/: contracts_declaration.hxx  emit_error.hxx  expression_declaration.hxx  functions_declaration.hxx  variables_declaration.hxx
wheel_semantic/: CMakeLists.txt  semantic.cxx
wheel_semantic/include/wheel_semantic/: config.hxx  errors.hxx  literal_semantic.hxx  program.hxx  semantic.hxx
wheel_utils/: CMakeLists.txt
wheel_utils/include/wheel_utils/: __wheel_utils_config.hxx  logging.hxx  meta_macro.hxx
